--- a/configs/config.testnet.yaml
+++ b/configs/config.testnet.yaml
@@ -11,7 +11,6 @@ evm_providers:
     is_native: true
     is_relay_target: true
     socket_address: "0x0218371b18340aBD460961bdF3Bd5F01858dAB53"
-    vault_address: "0x90381bB369D4F8069fdA9246b23637a78c5d1c83"
     authority_address: "0x0000000000000000000000000000000000000400"
     relayer_manager_address: "0x0000000000000000000000000000000000002000"
   - name: "sepolia"
@@ -22,7 +21,6 @@ evm_providers:
     is_relay_target: false
     eip1559: true
     socket_address: "0xdAcc4aeea580F782bB991eA862e1a57827Ea9D68"
-    vault_address: "0x9070e3a291B96D156f361A850410d656880540D2"
     authority_address: "0xC96971f6F5A1D20EFcD465B1163812a955b414A3"
   - name: "bsc-testnet"
     id: 97
@@ -32,7 +30,6 @@ evm_providers:
     is_relay_target: false
     is_initially_escalated: true
     socket_address: "0x8039c3AD8ED55509fD3f6Daa78867923fDe6E61c"
-    vault_address: "0x27C66cb5caa07C9B332939c357c789C606f5054C"
     authority_address: "0xCf9f6428A309b6652a1dfaA4d8aB8B61C9c7E8CF"
     chainlink_usdc_usd_address: "0x90c069C4538adAc136E051052E14c1cD799C41B7"
     chainlink_usdt_usd_address: "0xEca2605f0BCF2BA5966372C99837b1F182d3D620"
@@ -47,7 +44,6 @@ evm_providers:
     is_relay_target: false
     eip1559: true
     socket_address: "0xA25357F3C313Bd13885678f935178211f0dF6722"
-    vault_address: "0xB2ba0020560cF6c164DC48D1E29559AbA8472208"
     authority_address: "0x2FD5232fDFa6e1c127e7821CC48108Ca79281a38"
     chainlink_usdc_usd_address: "0x572dDec9087154dC5dfBB1546Bb62713147e0Ab0"
     chainlink_usdt_usd_address: "0x92C09849638959196E976289418e5973CC96d645"
@@ -62,7 +58,6 @@ evm_providers:
     is_relay_target: false
     eip1559: true
     socket_address: "0xdAcc4aeea580F782bB991eA862e1a57827Ea9D68"
-    vault_address: "0x9070e3a291B96D156f361A850410d656880540D2"
     authority_address: "0x15EDC0c65004548fa787Bc01e533366674946C5F"
   - name: "arbitrum-sepolia"
     id: 421614
@@ -73,11 +68,10 @@ evm_providers:
     is_relay_target: false
     eip1559: true
     socket_address: "0xd1E060FD930B75DA9A709c91E6Ad03B330Fb2950"
-    vault_address: "0x6EeE91b7c69e3576C13cE7a9C7C0E305dF6996F9"
     authority_address: "0x4dA97eCD85d4EE00E26C5f3aF21e6Da7bc3F71e2"
 
 handler_configs:
-  - handler_type: BridgeRelay
+  - handler_type: Socket
     watch_list: [49088, 11155111, 97, 80001, 84532, 421614]
   - handler_type: Roundup
     watch_list: [49088]
