--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,6 +10,9 @@ repository = { workspace = true }
 
 [dependencies]
 # General
+anyhow = { workspace = true }
+bitcoincore-rpc = { workspace = true }
+miniscript = { workspace = true }
 log = { workspace = true }
 rand = { workspace = true }
 sentry = { workspace = true }
@@ -20,9 +23,9 @@ async-trait = { workspace = true }
 async-recursion = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = [
-	"signal",
-	"rt-multi-thread",
-	"parking_lot",
+    "signal",
+    "rt-multi-thread",
+    "parking_lot",
 ] }
 k256 = { workspace = true, features = ["ecdsa"] }
 sha3 = { workspace = true }
