--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -17,6 +17,7 @@ log = { workspace = true }
 rand = { workspace = true }
 sentry = { workspace = true }
 ethers = { workspace = true }
+serde_json = { workspace = true }
 serde_yaml = { workspace = true }
 tokio-stream = { workspace = true }
 async-trait = { workspace = true }
