--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,6 +67,11 @@ sc-utils = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-f
 sc-service = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
 sc-sysinfo = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
 prometheus-endpoint = { package = "substrate-prometheus-endpoint", default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-v1.3.0" }
+subxt = { workspace = true, features = [
+	"substrate-compat",
+	"native",
+	"jsonrpsee",
+] }
 
 # Substrate Builds
 substrate-build-script-utils = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
