--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -20,8 +20,9 @@ reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true, features = ["alloc"] }
 tokio = { workspace = true, features = [
-	"signal",
-	"rt-multi-thread",
-	"parking_lot",
-	"macros",
+    "signal",
+    "rt-multi-thread",
+    "parking_lot",
+    "macros",
 ] }
+miniscript = { workspace = true }
