--- a/configs/config.mainnet.yaml
+++ b/configs/config.mainnet.yaml
@@ -14,6 +14,9 @@ evm_providers:
     authority_address: "0x0000000000000000000000000000000000000400"
     relayer_manager_address: "0x0000000000000000000000000000000000002000"
     bitcoin_socket_address: "TODO"
+    socket_queue_address: "TODO"
+    registration_pool_address: "TODO"
+    relay_executive_address: "TODO"
   - name: "ethereum"
     id: 1
     provider: "<YOUR_ETHEREUM_RPC_ENDPOINT>"
@@ -69,9 +72,9 @@ evm_providers:
 
 handler_configs:
   - handler_type: Socket
-    watch_list: [ 3068, 1, 56, 137, 8453, 42161 ]
+    watch_list: [3068, 1, 56, 137, 8453, 42161]
   - handler_type: Roundup
-    watch_list: [ 3068 ]
+    watch_list: [3068]
 
 ###  The items below are optional. ###
 
