CCCP-359, chore: init primitives

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,6 +61,8 @@ bitcoincore-rpc = { git = "https://github.com/bifrost-platform/rust-bitcoincore-
 tokio = "1.33.0"
 tokio-stream = "0.1.14"
 
+subxt = "0.35.0"
+
 # Substrate Client
 sc-cli = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
 sc-utils = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
