update & init registration_emit

--- a/periodic/Cargo.toml
+++ b/periodic/Cargo.toml
@@ -22,6 +22,7 @@ rand = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["macros"] }
+subxt = { workspace = true }
 
 # Bifrost Relayer
 br-cli = { path = "../client/cli", default-features = false }
