--- a/configs/config.mainnet.yaml
+++ b/configs/config.mainnet.yaml
@@ -2,6 +2,10 @@ system:
   private_key: "<YOUR_RELAYER_PRIVATE_KEY>"
   debug_mode: false
 
+btc_provider:
+  provider: "<YOUR_BITCOIN_RPC_ENDPOINT>"
+  chain: "main"
+
 evm_providers:
   - name: "bifrost"
     id: 3068
