--- a/configs/config.testnet.yaml
+++ b/configs/config.testnet.yaml
@@ -2,6 +2,10 @@ system:
   private_key: "<YOUR_RELAYER_PRIVATE_KEY>"
   debug_mode: false
 
+btc_provider:
+  provider: "<YOUR_BITCOIN_RPC_ENDPOINT>"
+  chain: "test"
+
 evm_providers:
   - name: "bifrost-testnet"
     id: 49088
