CCCP-363, feat: finalize pub key submission

--- a/periodic/Cargo.toml
+++ b/periodic/Cargo.toml
@@ -23,6 +23,8 @@ reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["macros"] }
 tokio-stream = { workspace = true }
+bitcoincore-rpc = { workspace = true }
+subxt = { workspace = true }
 
 # Bifrost Relayer
 br-cli = { path = "../client/cli", default-features = false }
