--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -27,3 +27,4 @@ tokio = { workspace = true, features = [
 ] }
 miniscript = { workspace = true }
 subxt = { workspace = true }
+bitcoincore-rpc = { workspace = true }
