--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -31,6 +31,7 @@ tokio = { workspace = true, features = [
 k256 = { workspace = true, features = ["ecdsa"] }
 sha3 = { workspace = true }
 subxt = { workspace = true }
+url = { workspace = true }
 
 # Bifrost Relayer
 br-primitives = { path = "../primitives", default-features = false }
@@ -41,3 +42,8 @@ sc-service = { workspace = true }
 
 [dev-dependencies]
 serde_json = { workspace = true }
+array-bytes = { workspace = true }
+
+sc-keystore = { workspace = true }
+sp-core = { workspace = true }
+sp-application-crypto = { workspace = true }
