--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -28,3 +28,4 @@ tokio = { workspace = true, features = [
 miniscript = { workspace = true }
 subxt = { workspace = true }
 bitcoincore-rpc = { workspace = true }
+url = { workspace = true }
