--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -24,14 +24,19 @@ async-trait = { workspace = true }
 async-recursion = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = [
-	"signal",
-	"rt-multi-thread",
-	"parking_lot",
+    "signal",
+    "rt-multi-thread",
+    "parking_lot",
 ] }
 k256 = { workspace = true, features = ["ecdsa"] }
 sha3 = { workspace = true }
 subxt = { workspace = true }
 url = { workspace = true }
+
+# subs
+sc-keystore = { workspace = true }
+sp-core = { workspace = true }
+sp-application-crypto = { workspace = true }
 
 # Bifrost Relayer
 br-primitives = { path = "../primitives", default-features = false }
@@ -43,7 +48,3 @@ sc-service = { workspace = true }
 [dev-dependencies]
 serde_json = { workspace = true }
 array-bytes = { workspace = true }
-
-sc-keystore = { workspace = true }
-sp-core = { workspace = true }
-sp-application-crypto = { workspace = true }
