CCCP-362, feature: implement psbt signer & pub key submitter (#118)
* CCCP-362, chore: init PsbtSigner

* CCCP-362, chore: add impls

* CCCP-362, chore: add utils

* CCCP-362, chore: add missing docstrings

* CCCP-362, chore: add logs

* CCCP-362, fix: resolve conflicts

* CCCP-363, feature: impl pub key submitter (#119)

* CCCP-363, feat: init service

* CCCP-363, feat: init PubKeySubmitter

* CCCP-363, feat: check pending registrations

* CCCP-363, feat: finalize pub key submission

* CCCP-363, fix: replace log target

* CCCP-363, feat: apply to service

* CCCP-363, feat: impl XtRequester

* CCCP-362, chore: parse provider url

* CCCP-338, test: load keystore from sc_keystore

* CCCP-338, chore: no need to wrap with `Arc`

* CCCP-338, feature: use sc-keystore as db

* CCCP-362, fix: apply review suggestion(1)

Co-authored-by: Min-seong Kwon <kwonarseus@gmail.com>

* CCCP-367, chore: cleanup code (#121)

* CCCP-362, chore: check native protocol contracts existance

* CCCP-362, chore: handle keystore errors

* CCCP-362, fix: use client contract call

* CCCP-362, feat: send new block event msg

* CCCP-362, fix: remove unused panic

* CCCP-362, chore: add success logs

* CCCP-362, chore: remove unused todo

* CCCP-362, feat: impl btc client

* CCCP-362, chore: cargo clippy

* CCCP-362, chore: add logs and docstrings

* CCCP-362, chore: use box to prevent large size

* CCCP-362, fix: rollback btc client

* CCCP-338, fix: use RpcApi:call() for BlockManager

* CCCP-338, chore: temporary underscored

---------

Co-authored-by: alstjd0921 <kwonarseus@gmail.com>

--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -24,13 +24,19 @@ async-trait = { workspace = true }
 async-recursion = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = [
-	"signal",
-	"rt-multi-thread",
-	"parking_lot",
+    "signal",
+    "rt-multi-thread",
+    "parking_lot",
 ] }
 k256 = { workspace = true, features = ["ecdsa"] }
 sha3 = { workspace = true }
 subxt = { workspace = true }
+url = { workspace = true }
+
+# subs
+sc-keystore = { workspace = true }
+sp-core = { workspace = true }
+sp-application-crypto = { workspace = true }
 
 # Bifrost Relayer
 br-primitives = { path = "../primitives", default-features = false }
@@ -41,3 +47,4 @@ sc-service = { workspace = true }
 
 [dev-dependencies]
 serde_json = { workspace = true }
+array-bytes = { workspace = true }
