--- a/configs/config.testnet.yaml
+++ b/configs/config.testnet.yaml
@@ -1,6 +1,12 @@
 system:
   private_key: "<YOUR_RELAYER_PRIVATE_KEY>"
+  keystore_path: "<YOUR_KEYSTORE_PATH>"
+  keystore_password: "<YOUR_KEYSTORE_PASSWORD>"
   debug_mode: false
+
+btc_provider:
+  provider: "<YOUR_BITCOIN_RPC_ENDPOINT>"
+  chain: "test"
 
 evm_providers:
   - name: "bifrost-testnet"
