--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -30,6 +30,13 @@ tokio = { workspace = true, features = [
 ] }
 k256 = { workspace = true, features = ["ecdsa"] }
 sha3 = { workspace = true }
+subxt = { workspace = true }
+url = { workspace = true }
+
+# subs
+sc-keystore = { workspace = true }
+sp-core = { workspace = true }
+sp-application-crypto = { workspace = true }
 
 # Bifrost Relayer
 br-primitives = { path = "../primitives", default-features = false }
@@ -40,3 +47,4 @@ sc-service = { workspace = true }
 
 [dev-dependencies]
 serde_json = { workspace = true }
+array-bytes = { workspace = true }
