--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -20,9 +20,12 @@ reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true, features = ["alloc"] }
 tokio = { workspace = true, features = [
-    "signal",
-    "rt-multi-thread",
-    "parking_lot",
-    "macros",
+	"signal",
+	"rt-multi-thread",
+	"parking_lot",
+	"macros",
 ] }
 miniscript = { workspace = true }
+subxt = { workspace = true }
+bitcoincore-rpc = { workspace = true }
+url = { workspace = true }
