BRP inbound flow handler & btc blockmanager implementation (#114)
* CCCP-338, chore: add bitcoin dependencies

* CCCP-338, feature: scaffold

* CCCP-338, chore: suggest inline

* CCCP-338, refactor: impl some From<_> trait

* CCCP-338, feature: implement create_new_keypair() & sign_psbt()

* CCCP-338, chore: inline secp gen

* CCCP-338, feature: restructure PendingOutboundPool

* CCCP-338, feature: bitcoin socket contract

* CCCP-338, feature: brp inbound flow

* CCCP-338, chore: remove btc_registration_handler.rs & btc_relay_handler.rs

* CCCP-338, feature: inlining suggest

* CCCP-338, feature: relay brp SocketEventStatus::Requested

* CCCP-338, chore: config format update

* CCCP-338, chore: cleanup

* CCCP-338, feature: spawn brp tasks

* CCCP-338, feature: remove `PendingOutboundPool`

* CCCP-338, chore: rollback

* CCCP-338, feature: remove `PendingOutboundPool` & `vault_set`

* CCCP-360, feature: add precompile contract instances (#115)

* CCCP-338, feature: resolve todo

* CCCP-338, chore: optimize imports

* CCCP-338, feature: rollback `PendingOutboundPool`

* chore: update precompile abi (#117)

* CCCP-338, feature: rollback `PendingOutboundPool` - 2

* CCCP-338, refactor: move `is_selected_relayer` into EthClient

* CCCP-338, feature: implement get_user_bfc_address

* CCCP-338, chore: derive EthAbiCodec

* CCCP-338, chore: missing argument

* CCCP-338, chore: call order optimize

* CCCP-338, feature: implement outbound handler

* CCCP-338, fix: decimal calculate

* CCCP-338, fix: decimal calculate

* CCCP-359, feature: init substrate modules (#116)

* CCCP-359, chore: init substrate

* CCCP-359, chore: init primitives

* CCCP-359, feat: init UnsignedTransactionManager

* CCCP-359, feat: impl task

* CCCP-359, feat: apply to service

* CCCP-359, chore: order pub/use

* CCCP-359, chore: add missing docstrings

* CCCP-359, chore: add missing docstrings

* CCCP-359, fix: resolve

--- a/configs/config.mainnet.yaml
+++ b/configs/config.mainnet.yaml
@@ -1,6 +1,12 @@
 system:
   private_key: "<YOUR_RELAYER_PRIVATE_KEY>"
+  keystore_path: "<YOUR_KEYSTORE_PATH>"
+  keystore_password: "<YOUR_KEYSTORE_PASSWORD>"
   debug_mode: false
+
+btc_provider:
+  provider: "<YOUR_BITCOIN_RPC_ENDPOINT>"
+  chain: "main"
 
 evm_providers:
   - name: "bifrost"
@@ -13,6 +19,10 @@ evm_providers:
     socket_address: "0xd551F33Ca8eCb0Be83d8799D9C68a368BA36Dd52"
     authority_address: "0x0000000000000000000000000000000000000400"
     relayer_manager_address: "0x0000000000000000000000000000000000002000"
+    bitcoin_socket_address: "TODO"
+    socket_queue_address: "TODO"
+    registration_pool_address: "TODO"
+    relay_executive_address: "TODO"
   - name: "ethereum"
     id: 1
     provider: "<YOUR_ETHEREUM_RPC_ENDPOINT>"
