--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -25,3 +25,7 @@ tokio = { workspace = true, features = [
 	"parking_lot",
 	"macros",
 ] }
+miniscript = { workspace = true }
+subxt = { workspace = true }
+bitcoincore-rpc = { workspace = true }
+url = { workspace = true }
