--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -23,6 +23,9 @@ tokio = { workspace = true, features = [
 	"rt-multi-thread",
 	"parking_lot",
 ] }
+miniscript = { workspace = true }
+bitcoincore-rpc = { workspace = true }
+subxt = { workspace = true }
 
 # Bifrost Relayer
 br-cli = { path = "../client/cli", default-features = false }
