--- a/periodic/Cargo.toml
+++ b/periodic/Cargo.toml
@@ -25,6 +25,7 @@ tokio = { workspace = true, features = ["macros"] }
 tokio-stream = { workspace = true }
 bitcoincore-rpc = { workspace = true }
 subxt = { workspace = true }
+array-bytes = { workspace = true }
 
 # Bifrost Relayer
 br-cli = { path = "../client/cli", default-features = false }
