--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -11,6 +11,7 @@ build = "build.rs"
 
 [dependencies]
 # General
+base64 = { workspace = true }
 log = { workspace = true }
 env_logger = { workspace = true }
 chrono = { workspace = true }
@@ -26,6 +27,11 @@ tokio = { workspace = true, features = [
 miniscript = { workspace = true }
 bitcoincore-rpc = { workspace = true }
 subxt = { workspace = true }
+reqwest = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+once_cell = "1.10.0"
+array-bytes = { workspace = true }
 
 # Bifrost Relayer
 br-cli = { path = "../client/cli", default-features = false }
@@ -45,3 +51,9 @@ substrate-build-script-utils = { workspace = true }
 
 [[bin]]
 name = "bifrost-relayer"
+
+[features]
+registration-integration = []
+inbound-integration = []
+outbound-integration = []
+
