--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -27,6 +27,7 @@ tokio = { workspace = true, features = [
 miniscript = { workspace = true }
 bitcoincore-rpc = { workspace = true }
 subxt = { workspace = true }
+subxt-signer = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
