--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,8 +52,10 @@ base64 = "0.22.0"
 serde_yaml = "0.9.25"
 serde = "1.0.188"
 serde_json = "1.0.107"
+libsecp256k1 = "0.5"
 
 hex = "0.4.3"
+hex-literal = "0.3"
 ethers = { git = "https://github.com/bifrost-platform/ethers-rs", tag = "ethers-v2.0.10-arbitrum-support" }
 k256 = "0.13.1"
 sha3 = "0.10.8"
@@ -64,7 +66,8 @@ bitcoincore-rpc = { git = "https://github.com/bifrost-platform/rust-bitcoincore-
 tokio = "1.33.0"
 tokio-stream = "0.1.14"
 
-subxt = "0.35.0"
+subxt = "0.37.0"
+subxt-signer = "0.37.0"
 
 # Substrate Clients
 sc-cli = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
@@ -77,6 +80,7 @@ prometheus-endpoint = { package = "substrate-prometheus-endpoint", default-featu
 # Substrate Primitives
 sp-core = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
 sp-application-crypto = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
+sp-io = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
 
 # Substrate Builds
 substrate-build-script-utils = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
