--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -26,6 +26,12 @@ tokio = { workspace = true, features = [
 miniscript = { workspace = true }
 bitcoincore-rpc = { workspace = true }
 subxt = { workspace = true }
+reqwest = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+once_cell = "1.10.0"
+array-bytes = { workspace = true }
+base64 = { workspace = true }
 
 # Bifrost Relayer
 br-cli = { path = "../client/cli", default-features = false }
