--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -26,12 +26,6 @@ tokio = { workspace = true, features = [
 miniscript = { workspace = true }
 bitcoincore-rpc = { workspace = true }
 subxt = { workspace = true }
-reqwest = { workspace = true }
-serde = { workspace = true }
-serde_json = { workspace = true }
-once_cell = "1.10.0"
-array-bytes = { workspace = true }
-base64 = { workspace = true }
 
 # Bifrost Relayer
 br-cli = { path = "../client/cli", default-features = false }
@@ -45,6 +39,14 @@ sc-cli = { workspace = true }
 sc-service = { workspace = true }
 sc-sysinfo = { workspace = true }
 prometheus-endpoint = { workspace = true }
+
+[dev-dependencies]
+reqwest = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+once_cell = { workspace = true }
+array-bytes = { workspace = true }
+base64 = { workspace = true }
 
 [build-dependencies]
 substrate-build-script-utils = { workspace = true }
