--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,6 @@ url = "2.5.0"
 array-bytes = "6.1"
 base64 = "0.22.0"
 libsecp256k1 = "0.5"
-hex-literal = "0.3"
 
 serde_yaml = "0.9.25"
 serde = "1.0.188"
@@ -67,7 +66,6 @@ tokio = "1.33.0"
 tokio-stream = "0.1.14"
 
 subxt = "0.37.0"
-once_cell = "1.10.0"
 
 # Substrate Clients
 sc-cli = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
@@ -84,6 +82,9 @@ sp-io = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-feat
 
 # Substrate Builds
 substrate-build-script-utils = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
+
+[workspace.dev-dependencies]
+sp-io = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
 
 [profile.production]
 inherits = "release"
