--- a/configs/config.testnet.yaml
+++ b/configs/config.testnet.yaml
@@ -13,16 +13,16 @@ evm_providers:
     id: 49088
     provider: "<YOUR_BIFROST_TESTNET_RPC_ENDPOINT>"
     call_interval: 3000
-    block_confirmations: 5
+    block_confirmations: 3
     is_native: true
     is_relay_target: true
     socket_address: "0x0218371b18340aBD460961bdF3Bd5F01858dAB53"
     authority_address: "0x0000000000000000000000000000000000000400"
     relayer_manager_address: "0x0000000000000000000000000000000000002000"
-    bitcoin_socket_address: "TODO"
-    socket_queue_address: "TODO"
-    registration_pool_address: "TODO"
-    relay_executive_address: "TODO"
+    bitcoin_socket_address: "0x619d50242bCA4141aEEE35822F751D768e63397a"
+    socket_queue_address: "0x0000000000000000000000000000000000000101"
+    registration_pool_address: "0x0000000000000000000000000000000000000100"
+    relay_executive_address: "0x0000000000000000000000000000000000000803"
   - name: "sepolia"
     id: 11155111
     provider: "<YOUR_SEPOLIA_RPC_ENDPOINT>"
