[Testnet] Apply Bitcoin Relay Protocol (BRP) (#130)
* BRP inbound flow handler & btc blockmanager implementation (#114)

* CCCP-338, chore: add bitcoin dependencies

* CCCP-338, feature: scaffold

* CCCP-338, chore: suggest inline

* CCCP-338, refactor: impl some From<_> trait

* CCCP-338, feature: implement create_new_keypair() & sign_psbt()

* CCCP-338, chore: inline secp gen

* CCCP-338, feature: restructure PendingOutboundPool

* CCCP-338, feature: bitcoin socket contract

* CCCP-338, feature: brp inbound flow

* CCCP-338, chore: remove btc_registration_handler.rs & btc_relay_handler.rs

* CCCP-338, feature: inlining suggest

* CCCP-338, feature: relay brp SocketEventStatus::Requested

* CCCP-338, chore: config format update

* CCCP-338, chore: cleanup

* CCCP-338, feature: spawn brp tasks

* CCCP-338, feature: remove `PendingOutboundPool`

* CCCP-338, chore: rollback

* CCCP-338, feature: remove `PendingOutboundPool` & `vault_set`

* CCCP-360, feature: add precompile contract instances (#115)

* CCCP-338, feature: resolve todo

* CCCP-338, chore: optimize imports

* CCCP-338, feature: rollback `PendingOutboundPool`

* chore: update precompile abi (#117)

* CCCP-338, feature: rollback `PendingOutboundPool` - 2

* CCCP-338, refactor: move `is_selected_relayer` into EthClient

* CCCP-338, feature: implement get_user_bfc_address

* CCCP-338, chore: derive EthAbiCodec

* CCCP-338, chore: missing argument

* CCCP-338, chore: call order optimize

* CCCP-338, feature: implement outbound handler

* CCCP-338, fix: decimal calculate

* CCCP-338, fix: decimal calculate

* CCCP-359, feature: init substrate modules (#116)

* CCCP-359, chore: init substrate

* CCCP-359, chore: init primitives

* CCCP-359, feat: init UnsignedTransactionManager

* CCCP-359, feat: impl task

* CCCP-359, feat: apply to service

* CCCP-359, chore: order pub/use

* CCCP-359, chore: add missing docstrings

* CCCP-359, 

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ sentry = { version = "0.32.1", default-features = false, features = [
 	"panic",
 ] }
 
+anyhow = "1.0.81"
 async-trait = "0.1.73"
 async-recursion = "1.0.5"
 clap = "4.4.6"
@@ -44,6 +45,8 @@ reqwest = { version = "0.11.22", default-features = false, features = [
 ] }
 rand = "0.8.5"
 lazy_static = "1.4.0"
+url = "2.5.0"
+array-bytes = "6.1"
 
 serde_yaml = "0.9.25"
 serde = "1.0.188"
@@ -54,15 +57,25 @@ ethers = { git = "https://github.com/bifrost-platform/ethers-rs", tag = "ethers-
 k256 = "0.13.1"
 sha3 = "0.10.8"
 
+miniscript = "11.0.0"
+bitcoincore-rpc = { git = "https://github.com/bifrost-platform/rust-bitcoincore-rpc", branch = "reqwest-migration" }
+
 tokio = "1.33.0"
 tokio-stream = "0.1.14"
 
-# Substrate Client
+subxt = "0.37.0"
+
+# Substrate Clients
 sc-cli = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
 sc-utils = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
 sc-service = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
 sc-sysinfo = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
+sc-keystore = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
 prometheus-endpoint = { package = "substrate-prometheus-endpoint", default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-v1.3.0" }
+
+# Substrate Primitives
+sp-core = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
+sp-application-crypto = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
 
 # Substrate Builds
 substrate-build-script-utils = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
