--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,10 +10,14 @@ repository = { workspace = true }
 
 [dependencies]
 # General
+anyhow = { workspace = true }
+bitcoincore-rpc = { workspace = true }
+miniscript = { workspace = true }
 log = { workspace = true }
 rand = { workspace = true }
 sentry = { workspace = true }
 ethers = { workspace = true }
+serde_json = { workspace = true }
 serde_yaml = { workspace = true }
 tokio-stream = { workspace = true }
 async-trait = { workspace = true }
@@ -26,6 +30,14 @@ tokio = { workspace = true, features = [
 ] }
 k256 = { workspace = true, features = ["ecdsa"] }
 sha3 = { workspace = true }
+subxt = { workspace = true }
+url = { workspace = true }
+array-bytes = { workspace = true }
+
+# subs
+sc-keystore = { workspace = true }
+sp-core = { workspace = true }
+sp-application-crypto = { workspace = true }
 
 # Bifrost Relayer
 br-primitives = { path = "../primitives", default-features = false }
@@ -36,3 +48,4 @@ sc-service = { workspace = true }
 
 [dev-dependencies]
 serde_json = { workspace = true }
+array-bytes = { workspace = true }
