--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [workspace]
 resolver = "2"
 members = [
-	"client",
-	"client/cli",
-	"metrics",
-	"periodic",
-	"primitives",
-	"relayer",
+    "client",
+    "client/cli",
+    "metrics",
+    "periodic",
+    "primitives",
+    "relayer",
 ]
 
 [profile.release]
@@ -24,11 +24,11 @@ repository = "https://github.com/bifrost-platform/bifrost-relayer.rs"
 log = "0.4.20"
 env_logger = "0.10.0"
 sentry = { version = "0.32.1", default-features = false, features = [
-	"reqwest",
-	"rustls",
-	"backtrace",
-	"contexts",
-	"panic",
+    "reqwest",
+    "rustls",
+    "backtrace",
+    "contexts",
+    "panic",
 ] }
 
 anyhow = "1.0.81"
@@ -39,9 +39,10 @@ cron = "0.12.0"
 chrono = "0.4.31"
 thiserror = "1.0.49"
 futures = "0.3.28"
-reqwest = { version = "0.11.22", default-features = false, features = [
-	"rustls-tls",
-	"json",
+reqwest = { version = "0.12.5", default-features = false, features = [
+    "rustls-tls",
+    "json",
+    "http2"
 ] }
 rand = "0.8.5"
 lazy_static = "1.4.0"
