CCCP-426, fix: migrate to ExtrinsicManager

--- a/primitives/Cargo.toml
+++ b/primitives/Cargo.toml
@@ -27,5 +27,6 @@ tokio = { workspace = true, features = [
 ] }
 miniscript = { workspace = true }
 subxt = { workspace = true }
+subxt-signer = { workspace = true, features = ["unstable-eth"] }
 bitcoincore-rpc = { workspace = true }
 url = { workspace = true }
