--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -30,6 +30,7 @@ tokio = { workspace = true, features = [
 k256 = { workspace = true, features = ["ecdsa"] }
 sha3 = { workspace = true }
 subxt = { workspace = true }
+subxt-signer = { workspace = true, features = ["unstable-eth"] }
 url = { workspace = true }
 array-bytes = { workspace = true }
 
