CCCP-426, refactor: use generic WalletManager

--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -26,6 +26,7 @@ tokio = { workspace = true, features = [
 miniscript = { workspace = true }
 bitcoincore-rpc = { workspace = true }
 subxt = { workspace = true }
+subxt-signer = { workspace = true, features = ["unstable-eth"] }
 
 # Bifrost Relayer
 br-cli = { path = "../client/cli", default-features = false }
