--- a/configs/config.mainnet.yaml
+++ b/configs/config.mainnet.yaml
@@ -1,6 +1,15 @@
 system:
   private_key: "<YOUR_RELAYER_PRIVATE_KEY>"
+  keystore_path: "<YOUR_KEYSTORE_PATH>"
+  keystore_password: "<YOUR_KEYSTORE_PASSWORD>"
   debug_mode: false
+
+btc_provider:
+  id: 10000
+  chain: "main"
+  provider: "<YOUR_BITCOIN_RPC_ENDPOINT>"
+  call_interval: 10000
+  block_confirmations: 2
 
 evm_providers:
   - name: "bifrost"
@@ -13,6 +22,10 @@ evm_providers:
     socket_address: "0xd551F33Ca8eCb0Be83d8799D9C68a368BA36Dd52"
     authority_address: "0x0000000000000000000000000000000000000400"
     relayer_manager_address: "0x0000000000000000000000000000000000002000"
+    bitcoin_socket_address: "0x73A9E443F51eE40C1469A740D9CCf0118e8FD9ca"
+    socket_queue_address: "0x0000000000000000000000000000000000000101"
+    registration_pool_address: "0x0000000000000000000000000000000000000100"
+    relay_executive_address: "0x0000000000000000000000000000000000000803"
   - name: "ethereum"
     id: 1
     provider: "<YOUR_ETHEREUM_RPC_ENDPOINT>"
@@ -77,6 +90,7 @@ handler_configs:
 bootstrap_config:
   is_enabled: true
   round_offset: 3
+  btc_block_offset: 3
 
 sentry_config:
   environment: "<YOUR_SENTRY_ENVIRONMENT>"
