--- a/relayer/Cargo.toml
+++ b/relayer/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bifrost-relayer"
-version = "2.0.0-pre"
+version = "2.0.0"
 description = "The core rust implementation for Bifrost relayer"
 authors = { workspace = true }
 homepage = { workspace = true }
