--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,12 +38,15 @@ cron = "0.12.0"
 chrono = "0.4.31"
 thiserror = "1.0.49"
 futures = "0.3.28"
-reqwest = { version = "0.11.22", default-features = false, features = [
+reqwest = { version = "0.12.5", default-features = false, features = [
 	"rustls-tls",
 	"json",
+	"http2",
 ] }
 rand = "0.8.5"
 lazy_static = "1.4.0"
+url = "2.5.0"
+array-bytes = "6.1"
 
 serde_yaml = "0.9.25"
 serde = "1.0.188"
@@ -54,18 +57,28 @@ ethers = { git = "https://github.com/bifrost-platform/ethers-rs", tag = "ethers-
 k256 = "0.13.1"
 sha3 = "0.10.8"
 
+miniscript = "11.0.0"
+bitcoincore-rpc = { git = "https://github.com/bifrost-platform/rust-bitcoincore-rpc", branch = "reqwest-migration" }
+
 tokio = "1.33.0"
 tokio-stream = "0.1.14"
 
-# Substrate Client
-sc-cli = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
-sc-utils = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
-sc-service = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
-sc-sysinfo = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
-prometheus-endpoint = { package = "substrate-prometheus-endpoint", default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-v1.3.0" }
+subxt = "0.37.0"
+
+# Substrate Clients
+sc-cli = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.12.0" }
+sc-utils = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.12.0" }
+sc-service = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.12.0" }
+sc-sysinfo = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.12.0" }
+sc-keystore = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.12.0" }
+prometheus-endpoint = { package = "substrate-prometheus-endpoint", default-features = false, git = "https://github.com/bifrost-platform/polkadot-sdk", branch = "bifrost-polkadot-v1.12.0" }
+
+# Substrate Primitives
+sp-core = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.12.0" }
+sp-application-crypto = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.12.0" }
 
 # Substrate Builds
-substrate-build-script-utils = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.3.0" }
+substrate-build-script-utils = { git = "https://github.com/bifrost-platform/polkadot-sdk", default-features = false, branch = "bifrost-polkadot-v1.12.0" }
 
 [profile.production]
 inherits = "release"
