--- a/periodic/Cargo.toml
+++ b/periodic/Cargo.toml
@@ -22,6 +22,11 @@ rand = { workspace = true }
 reqwest = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
 tokio = { workspace = true, features = ["macros"] }
+tokio-stream = { workspace = true }
+bitcoincore-rpc = { workspace = true }
+subxt = { workspace = true }
+array-bytes = { workspace = true }
+miniscript = { workspace = true }
 
 # Bifrost Relayer
 br-cli = { path = "../client/cli", default-features = false }
