CCCP-295, refactor: remove unused dependencies and simplify transaction handling
- Removed `byteorder` dependency from `Cargo.toml` files in both root and client directories.
- Updated transaction handling in various handlers to utilize `send_transaction` function for better task management and error handling.
- Introduced `SpawnTaskHandle` in several handlers to facilitate asynchronous task spawning.
- Cleaned up unused code and commented-out sections across multiple files, enhancing overall code readability and maintainability.
- Adjusted imports and struct definitions to reflect the removal of redundant components.

This commit streamlines the codebase by eliminating unnecessary dependencies and improving the transaction processing flow.

--- a/periodic/Cargo.toml
+++ b/periodic/Cargo.toml
@@ -28,7 +28,7 @@ subxt = { workspace = true }
 array-bytes = { workspace = true }
 miniscript = { workspace = true }
 eyre = { workspace = true }
-byteorder = { workspace = true }
+sc-service = { workspace = true }
 
 # Bifrost Relayer
 br-cli = { path = "../client/cli", default-features = false }
